810-canary-deployments/web-application-green/deployment-green.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo-green
spec:
  replicas: 1
  selector:
    matchLabels:
      app: echo
      version: green
  template:
    metadata:
      labels:
        app: echo
        version: green
    spec:
      containers:
        - name: echo
          image: "docker.io/hashicorp/http-echo"
          args:
            - -listen=:8080
            - --text="echo-green"
          ports:
            - name: http
              protocol: TCP
              containerPort: 8080
