810-canary-deployments/web-application-green/service-green.yaml
apiVersion: v1
kind: Service
metadata:
  name: echo-green
  labels:
    version: green
spec:
  type: ClusterIP
  ports:
    - port: 8080
      protocol: TCP
      name: http
  selector:
    app: echo
    version: green
