810-canary-deployments/web-application-green/ingress-green-canary.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-weight: "25" # <-- please adjust later up to 100
  name: ingress-echo-canary
  labels:
    version: green
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - web-application-canary-<YOURNAME>.workshop.metakube.org # <-- please adjust <YOURNAME>
      secretName: workshop-tls-cert
  rules:
    - host: web-application-canary-<YOURNAME>.workshop.metakube.org # <-- please adjust <YOURNAME>
      http:
        paths:
          - path: /echo
            pathType: Exact
            backend:
              service:
                name: echo-green
                port:
                  number: 8080
